// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots StatusIndicator All 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <p
      class="StatusIndicator-t1vtrp-0 bAmZds"
      font-size="smaller"
      type="neutral"
    >
      Neutral
    </p>
    <p
      class="StatusIndicator-t1vtrp-0 dfEhGU"
      font-size="smaller"
      type="quiet"
    >
      Quiet
    </p>
    <p
      class="StatusIndicator-t1vtrp-0 HGpwD"
      font-size="smaller"
      type="informative"
    >
      Informative
    </p>
    <p
      class="StatusIndicator-t1vtrp-0 hFgyBj"
      font-size="smaller"
      type="success"
    >
      Success
    </p>
    <p
      class="StatusIndicator-t1vtrp-0 eUxftY"
      font-size="smaller"
      type="warning"
    >
      Warning
    </p>
    <p
      class="StatusIndicator-t1vtrp-0 eYOOcD"
      font-size="smaller"
      type="danger"
    >
      Danger
    </p>
  </div>
</div>
`;

exports[`Storyshots StatusIndicator Danger 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <p
      class="StatusIndicator-t1vtrp-0 gbtKcH"
      font-size="smaller"
      type="danger"
    >
      Danger
    </p>
  </div>
</div>
`;

exports[`Storyshots StatusIndicator Following text 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <div
      class="Box-sc-1qu1edy-0 dgqwRo"
    >
      <span
        class="sc-AxgMl irYLZC"
        font-size="26px"
        font-weight="500"
      >
        Label
      </span>
      <p
        class="StatusIndicator-t1vtrp-0 cIlGSI"
        font-size="smaller"
        type="neutral"
      >
        Status
      </p>
    </div>
    <div
      class="Box-sc-1qu1edy-0 dgqwRo"
    >
      <span
        class="sc-AxheI sc-Axmtr jGoQwU"
        font-size="20px"
        font-weight="500"
      >
        Label
      </span>
      <p
        class="StatusIndicator-t1vtrp-0 cIlGSI"
        font-size="smaller"
        type="neutral"
      >
        Status
      </p>
    </div>
    <div
      class="Box-sc-1qu1edy-0 dgqwRo"
    >
      <span
        class="sc-AxhCb czaJmK"
        color="currentColor"
        font-size="16px"
      >
        Label
      </span>
      <p
        class="StatusIndicator-t1vtrp-0 cIlGSI"
        font-size="smaller"
        type="neutral"
      >
        Status
      </p>
    </div>
    <div
      class="Box-sc-1qu1edy-0 dgqwRo"
    >
      <span
        class="sc-AxhCb dfJiXK"
        color="currentColor"
        font-size="small"
      >
        Label
      </span>
      <p
        class="StatusIndicator-t1vtrp-0 cIlGSI"
        font-size="smaller"
        type="neutral"
      >
        Status
      </p>
    </div>
    <div
      class="Box-sc-1qu1edy-0 dgqwRo"
    >
      <span
        class="sc-AxhCb gttWcT"
        color="currentColor"
        font-size="smaller"
      >
        Label
      </span>
      <p
        class="StatusIndicator-t1vtrp-0 cIlGSI"
        font-size="smaller"
        type="neutral"
      >
        Status
      </p>
    </div>
    <div
      class="Box-sc-1qu1edy-0 dgqwRo"
    >
      <span
        class="sc-AxhCb czaJmK"
        color="currentColor"
        font-size="16px"
      >
        Long label Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus in eleifend metus, in tempus sapien. Morbi eget felis est. Nunc facilisis vel nisi nec ornare. Ut blandit ullamcorper enim sed fringilla. Quisque malesuada pharetra tincidunt. Mauris mauris tortor, maximus vitae tempor ac, tincidunt pharetra augue. In eget suscipit est. Suspendisse feugiat risus urna
      </span>
      <p
        class="StatusIndicator-t1vtrp-0 cIlGSI"
        font-size="smaller"
        type="neutral"
      >
        Status
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots StatusIndicator Informative 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <p
      class="StatusIndicator-t1vtrp-0 hnuXoH"
      font-size="smaller"
      type="informative"
    >
      Informative
    </p>
  </div>
</div>
`;

exports[`Storyshots StatusIndicator Inside flex 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <div
      class="Box-sc-1qu1edy-0 sc-AxjAm iVQrfK"
    >
      <span
        class="sc-AxgMl fyyuUF"
        font-size="26px"
        font-weight="500"
      >
        Label
      </span>
      <p
        class="StatusIndicator-t1vtrp-0 cIlGSI"
        font-size="smaller"
        type="neutral"
      >
        Status
      </p>
    </div>
    <div
      class="Box-sc-1qu1edy-0 sc-AxjAm iVQrfK"
    >
      <span
        class="sc-AxheI sc-Axmtr iRBWoo"
        font-size="20px"
        font-weight="500"
      >
        Label
      </span>
      <p
        class="StatusIndicator-t1vtrp-0 cIlGSI"
        font-size="smaller"
        type="neutral"
      >
        Status
      </p>
    </div>
    <div
      class="Box-sc-1qu1edy-0 sc-AxjAm iVQrfK"
    >
      <span
        class="sc-AxhCb laTFNi"
        color="currentColor"
        font-size="16px"
      >
        Label
      </span>
      <p
        class="StatusIndicator-t1vtrp-0 cIlGSI"
        font-size="smaller"
        type="neutral"
      >
        Status
      </p>
    </div>
    <div
      class="Box-sc-1qu1edy-0 sc-AxjAm iVQrfK"
    >
      <span
        class="sc-AxhCb chBKUG"
        color="currentColor"
        font-size="small"
      >
        Label
      </span>
      <p
        class="StatusIndicator-t1vtrp-0 cIlGSI"
        font-size="smaller"
        type="neutral"
      >
        Status
      </p>
    </div>
    <div
      class="Box-sc-1qu1edy-0 sc-AxjAm iVQrfK"
    >
      <span
        class="sc-AxhCb hlgKbb"
        color="currentColor"
        font-size="smaller"
      >
        Label
      </span>
      <p
        class="StatusIndicator-t1vtrp-0 cIlGSI"
        font-size="smaller"
        type="neutral"
      >
        Status
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots StatusIndicator Neutral 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <p
      class="StatusIndicator-t1vtrp-0 cIlGSI"
      font-size="smaller"
      type="neutral"
    >
      Neutral
    </p>
  </div>
</div>
`;

exports[`Storyshots StatusIndicator Quiet 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <p
      class="StatusIndicator-t1vtrp-0 fvoNSY"
      font-size="smaller"
      type="quiet"
    >
      Quiet
    </p>
  </div>
</div>
`;

exports[`Storyshots StatusIndicator Success 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <p
      class="StatusIndicator-t1vtrp-0 dXWjDv"
      font-size="smaller"
      type="success"
    >
      Success
    </p>
  </div>
</div>
`;

exports[`Storyshots StatusIndicator Warning 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <p
      class="StatusIndicator-t1vtrp-0 hgaihM"
      font-size="smaller"
      type="warning"
    >
      Warning
    </p>
  </div>
</div>
`;
